src/objects/DocuGen_Query__c.object
<CustomObject>
    <fields>
        <fullName>Old_Id__c</fullName>
        <label>Old Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query_Name__c</fullName>
        <label>Query Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query_Soql__c</fullName>
        <label>Query Soql</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>DocuGen Query</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Query_Name__c</columns>
        <columns>Old_Id__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DocQ-{0000}</displayFormat>
        <label>DocuGen Query Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuGen Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>